fixed alignment of tooltipimg with heroImg

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1481,7 +1481,7 @@ p {
 
   .tooltip-selector > .tooltipimg {
   	top: -292px;
-  	left: -5px;
+  	left: -4px;
   	height: 290px;
   	width: 290px;
   }
